syntax = "proto2";
package NYT.NProto;

option java_package = "protocol";

////////////////////////////////////////////////////////////////////////////////

message TSerializedMessageEnvelope
{
    optional int32 codec = 1 [default = 0];
}

////////////////////////////////////////////////////////////////////////////////

message TExtension
{
    required int32 tag = 1;
    required bytes data = 2;
}

message TExtensionSet
{
    repeated TExtension extensions = 1;
}

////////////////////////////////////////////////////////////////////////////////
